file(GLOB_RECURSE SRC_FILES "*.cpp" "*.h" "*.hpp")
assign_source_group("toytracer" ${SRC_FILES})

add_library(toytracer ${SRC_FILES})

set_target_properties(toytracer PROPERTIES PUBLIC_HEADER "toytracer.h")

ExternalProject_Add(
  shaderc
  SOURCE_DIR "${CMAKE_BINARY_DIR}/third_party/shaderc"
  INSTALL_DIR ${CMAKE_BINARY_DIR}/install
  GIT_REPOSITORY "https://github.com/google/shaderc.git"
  GIT_TAG "b3523d57461c1460af68dbd6bec1e8dd5c7ce2e7"
  UPDATE_DISCONNECTED ON
  PATCH_COMMAND python ${CMAKE_BINARY_DIR}/third_party/shaderc/utils/git-sync-deps
  CMAKE_ARGS
    -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG}
    -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
    -DCMAKE_C_FLAGS_RELWITHDEBINFO=${CMAKE_C_FLAGS_RELWITHDEBINFO}
    -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG}
    -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
    -DCMAKE_CXX_FLAGS_RELWITHDEBINFO=${CMAKE_CXX_FLAGS_RELWITHDEBINFO}
    -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/install
    -DSHADERC_ENABLE_NV_EXTENSIONS=ON
    -DSHADERC_ENABLE_SPVC=ON
    -DSHADERC_SKIP_TESTS=ON
)

ExternalProject_Add(
  assimp
  SOURCE_DIR "${CMAKE_BINARY_DIR}/third_party/assimp"
  INSTALL_DIR ${CMAKE_BINARY_DIR}/install
  GIT_REPOSITORY "https://github.com/assimp/assimp.git"
  GIT_TAG "3929ea064468dfe54b0d2de7e45aa4702d5a8f12"
  UPDATE_DISCONNECTED ON
  CMAKE_ARGS
    -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG}
    -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
    -DCMAKE_C_FLAGS_RELWITHDEBINFO=${CMAKE_C_FLAGS_RELWITHDEBINFO}
    -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG}
    -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
    -DCMAKE_CXX_FLAGS_RELWITHDEBINFO=${CMAKE_CXX_FLAGS_RELWITHDEBINFO}
    -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/install
    -DBUILD_SHARED_LIBS=OFF
    -DBUILD_FRAMEWORK=OFF
    -DASSIMP_DOUBLE_PRECISION=OFF
    -DASSIMP_OPT_BUILD_PACKAGES=OFF
    -DASSIMP_NO_EXPORT=ON
    -DASSIMP_BUILD_ASSIMP_TOOLS=OFF
    -DASSIMP_BUILD_TESTS=OFF
    -DINJECT_DEBUG_POSTFIX=OFF
    -DASSIMP_INSTALL_PDB=OFF
)

ExternalProject_Add(
  glm
  SOURCE_DIR ${CMAKE_BINARY_DIR}/third_party/glm
  INSTALL_DIR ${CMAKE_BINARY_DIR}/install
  GIT_REPOSITORY "https://github.com/g-truc/glm.git"
  GIT_TAG "f920ffabb21798fb35a7a71e939acfc1933faadd"
  UPDATE_DISCONNECTED ON
  BUILD_COMMAND ""
  CONFIGURE_COMMAND ""
  INSTALL_COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_BINARY_DIR}/third_party/glm/glm ${CMAKE_BINARY_DIR}/install/include/glm
)

ExternalProject_Add(
  glfw
  SOURCE_DIR "${CMAKE_BINARY_DIR}/third_party/glfw"
  INSTALL_DIR ${CMAKE_BINARY_DIR}/install
  GIT_REPOSITORY "https://github.com/glfw/glfw.git"
  GIT_TAG "d834f01ca43c0f5ddd31b00a7fc2f48abbafa3da"
  UPDATE_DISCONNECTED ON
  CMAKE_ARGS
    -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG}
    -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
    -DCMAKE_C_FLAGS_RELWITHDEBINFO=${CMAKE_C_FLAGS_RELWITHDEBINFO}
    -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG}
    -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
    -DCMAKE_CXX_FLAGS_RELWITHDEBINFO=${CMAKE_CXX_FLAGS_RELWITHDEBINFO}
    -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/install
    -DBUILD_SHARED_LIBS=OFF
    -DGLFW_BUILD_DOCS=OFF
    -DGLFW_BUILD_EXAMPLES=OFF
    -DGLFW_BUILD_TESTS=ON
    -DGLFW_INSTALL=ON
    -DUSE_MSVC_RUNTIME_LIBRARY_DLL=OFF
)

target_include_directories(toytracer PUBLIC 
  "${CMAKE_BINARY_DIR}/install/include/")

target_link_libraries(toytracer 
  "${CMAKE_BINARY_DIR}/install/lib/shaderc_combined.lib"
  "${CMAKE_BINARY_DIR}/install/lib/assimp-vc141-mt$<IF:$<CONFIG:Debug>,d,>.lib"
  "${CMAKE_BINARY_DIR}/install/lib/IrrXML$<IF:$<CONFIG:Debug>,d,>.lib"
  "${CMAKE_BINARY_DIR}/install/lib/zlibstatic$<IF:$<CONFIG:Debug>,d,>.lib"
  "${CMAKE_BINARY_DIR}/install/lib/glfw3.lib")

install(
  TARGETS toytracer 
  LIBRARY DESTINATION lib
  PUBLIC_HEADER DESTINATION include)